--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,4 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
+/target/
 .DS_Store
 .idea/shelf
 /confluence/target
@@ -96,4 +73,5 @@ distTmp/
 outTmp/
 /test.output
 /kotlin-native/dist
-kotlin-ide/
+kotlin-ide/w
+frontend
